<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#e35507"
                android:paddingTop="5dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <ImageView android:src="@drawable/logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"/>
                <!-- Logo Ends -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:padding="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/explainForEmailResetToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explainEmailForResetPassword"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/newAccountBlue"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/EmailForResetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_email"
                android:layout_marginTop="30dip"
                android:layout_marginBottom="20dip" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/SendEmailforResetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/send_button"
                android:text="@string/SendButton" />
          
        </LinearLayout>
  </RelativeLayout>

</ScrollView>